delivery/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: onboard-k8s-demo
  name: onboard-k8s-demo
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    run: onboard-k8s-demo
  type: LoadBalancer
