delivery/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /backend/*
        backend:
          serviceName: micro-backend-service
          servicePort: 80
      - path: /backend
        backend:
          serviceName: micro-backend-service
          servicePort: 80
  backend:
    serviceName: micro-frontend-service
    servicePort: 80
